--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:name=".activities.MainActivity"
             android:configChanges="keyboardHidden"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/LightTheme">
         </activity>
         <activity
@@ -38,6 +39,7 @@
         <activity
             android:name=".activities.Setup"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/Setup">
             <intent-filter>
                 <action android:name="com.aquamorph.frcmanager.activities.Setup"/>
