--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 12
-        versionName "1.0.0"
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "TBA_KEY", getProps("TBA_KEY"))
     }
@@ -39,11 +39,14 @@ android {
     }
     buildTypes {
         debug {
-            testCoverageEnabled true
-            minifyEnabled false
-            zipAlignEnabled false
+            //testCoverageEnabled true
+            //minifyEnabled false
+            //zipAlignEnabled false
+            testCoverageEnabled false
+            minifyEnabled true
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "boolean", "APP_DEBUG", "true"
+            buildConfigField "boolean", "APP_DEBUG", "false"
         }
         release {
             testCoverageEnabled false
