--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "com.aquamorph.frcmanager"
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 13
-        versionName "1.0.1"
+        versionCode 14
+        versionName "1.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "TBA_KEY", getProps("TBA_KEY"))
     }
@@ -47,7 +47,7 @@ android {
         }
         release {
             testCoverageEnabled false
-            minifyEnabled true
+            minifyEnabled false
             zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "boolean", "APP_DEBUG", "false"
