--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,11 @@ android {
     lintOptions {
         abortOnError false
     }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
+        androidTest.java.srcDirs += 'src/androidTest/kotlin'
+    }
 }
 
 dependencies {
@@ -72,6 +77,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.github.apl-devs:appintro:v4.2.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Android runner and rules support
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -87,7 +93,6 @@ dependencies {
 
     // add this for webview testing support
     androidTestImplementation 'com.android.support.test.espresso:espresso-web:3.0.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 repositories {
