--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.31'
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
         google()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:3.1.1') {
+        classpath('com.android.tools.build:gradle:3.1.2') {
             force = true
         }
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.40"
     }
 }
 
