--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,13 @@ def getProps(String propName) {
 }
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.2'
 
     defaultConfig {
         applicationId "com.aquamorph.frcmanager"
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 18
         versionName "1.1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -69,18 +69,19 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'org.assertj:assertj-core:1.7.1'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-v13:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.android.support:animated-vector-drawable:${supportLibVersion}"
+    implementation "com.android.support:support-v13:${supportLibVersion}"
+    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
+    implementation "com.android.support:design:${supportLibVersion}"
+    implementation "com.android.support:cardview-v7:${supportLibVersion}"
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.github.apl-devs:appintro:v4.2.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.40"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.40'
 
     // Android runner and rules support
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 
     // Espresso support
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -88,10 +89,10 @@ dependencies {
     })
 
     // add this for intent mocking support
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
 
     // add this for webview testing support
-    androidTestImplementation 'com.android.support.test.espresso:espresso-web:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-web:3.0.2'
 }
 
 repositories {
