--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,18 @@ buildscript {
         google()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:3.1.2') {
+        classpath('com.android.tools.build:gradle:3.1.4') {
             force = true
         }
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.40"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.60"
     }
 }
 
 allprojects {
+    ext {
+        supportLibVersion = '28.0.0-rc01'
+    }
+
     repositories {
         jcenter()
         mavenCentral()
