--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ def getProps(String propName) {
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.2'
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.aquamorph.frcmanager"
@@ -77,7 +77,7 @@ dependencies {
     implementation "com.android.support:cardview-v7:${supportLibVersion}"
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.github.apl-devs:appintro:v4.2.2'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.40'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlinLibVersion}"
 
     // Retrofit and OkHttp
     // OkHttp interceptors for logging
