--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        supportLibVersion = '28.0.0'
+        kotlinLibVersion = '1.2.71'
+    }
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
         google()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:3.1.4') {
+        classpath('com.android.tools.build:gradle:3.2.1') {
             force = true
         }
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.60"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinLibVersion}"
     }
 }
 
 allprojects {
-    ext {
-        supportLibVersion = '28.0.0-rc01'
-    }
+
 
     repositories {
         jcenter()
