--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,10 +72,11 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${supportLibVersion}"
     implementation "com.android.support:animated-vector-drawable:${supportLibVersion}"
     implementation "com.android.support:support-v13:${supportLibVersion}"
+    implementation "com.android.support:preference-v7:${supportLibVersion}"
     implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
     implementation "com.android.support:design:${supportLibVersion}"
     implementation "com.android.support:cardview-v7:${supportLibVersion}"
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.apl-devs:appintro:v4.2.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlinLibVersion}"
 
