--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url 'https://plugins.gradle.org/m2/' }
         google()
     }
     dependencies {
@@ -14,12 +15,11 @@ buildscript {
             force = true
         }
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinLibVersion}"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:9.1.1"
     }
 }
 
 allprojects {
-
-
     repositories {
         jcenter()
         mavenCentral()
