--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,17 +28,13 @@
             android:configChanges="keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/LightTheme">
-        </activity>
+            android:theme="@style/LightTheme"/>
         <activity
-            android:name=".activities.Settings">
-        </activity>
+            android:name=".activities.Settings"/>
         <activity
-            android:name=".activities.TeamSummary">
-        </activity>
+            android:name=".activities.TeamSummary"/>
         <activity
-            android:name=".activities.MatchSummaryActivity">
-        </activity>
+            android:name=".activities.MatchSummaryActivity"/>
         <activity
             android:name=".activities.Setup"
             android:label="@string/app_name"
