--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
         <activity
             android:name=".activities.TeamSummary"/>
         <activity
-            android:name=".activities.MatchSummaryActivity"/>
+            android:name=".activities.MatchBreakdown2019Activity"/>
+        <activity
+            android:name=".activities.MatchBreakdown2020Activity"/>
         <activity
             android:name=".activities.Setup"
             android:label="@string/app_name"
