--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/appName"
         android:supportsRtl="true"
         android:theme="@style/LightTheme"
         tools:ignore="GoogleAppIndexingWarning">
@@ -26,7 +26,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:configChanges="keyboardHidden"
-            android:label="@string/app_name"
+            android:label="@string/appName"
             android:screenOrientation="portrait"
             android:theme="@style/LightTheme"/>
         <activity
@@ -39,7 +39,7 @@
             android:name=".activities.MatchBreakdown2020Activity"/>
         <activity
             android:name=".activities.Setup"
-            android:label="@string/app_name"
+            android:label="@string/appName"
             android:screenOrientation="portrait"
             android:theme="@style/Setup">
             <intent-filter>
