--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -8,8 +8,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: set up JDK 1.8
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: 1.8
     - name: Build with Gradle
       run: ./gradlew clean assemble build
