--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: set up JDK 1.8
+    - name: set up JDK
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
-        java-version: 1.8
+        java-version: '11'
     - name: Build with Gradle
       run: ./gradlew clean assemble build
