--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,16 @@
 
 buildscript {
     ext {
-        kotlinLibVersion = '1.5.30'
+        kotlinLibVersion = '1.7.20'
     }
     repositories {
-        jcenter()
+        mavenCentral()
         maven { url 'https://maven.google.com' }
         maven { url 'https://plugins.gradle.org/m2/' }
         google()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:7.1.2') {
+        classpath('com.android.tools.build:gradle:7.4.1') {
             force = true
         }
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinLibVersion}"
@@ -21,7 +21,6 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         mavenCentral()
         google()
     }
