--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@
 # org.gradle.parallel=true
 android.enableJetifier=true
 android.useAndroidX=true
+
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2560m
