--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,14 +15,13 @@ def getProps(String propName) {
 }
 
 android {
-    compileSdkVersion 33
-
+    compileSdkVersion 34
     defaultConfig {
         applicationId "com.aquamorph.frcmanager"
-        minSdkVersion 15
-        targetSdkVersion 33
+        minSdkVersion 19
+        targetSdkVersion 34
         versionCode 27
-        versionName "1.7.0"
+        versionName "2024.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "TBA_KEY", getProps("TBA_KEY"))
         multiDexEnabled true
@@ -55,6 +54,11 @@ android {
         abortOnError false
     }
     namespace 'com.aquamorph.frcmanager'
+    buildToolsVersion '34.0.0'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
 }
 
 dependencies {
@@ -64,15 +68,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-    implementation 'androidx.preference:preference-ktx:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.apl-devs:appintro:v4.2.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlinLibVersion}"
-    implementation "com.squareup.retrofit2:retrofit:2.4.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
