--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        kotlinLibVersion = '1.8.10'
+        kotlinLibVersion = '1.9.21'
     }
     repositories {
         mavenCentral()
@@ -11,9 +11,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:7.4.2') {
-            force = true
-        }
+        classpath 'com.android.tools.build:gradle:8.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinLibVersion}"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:9.1.1"
     }
