--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,11 @@ def getProps(String propName) {
 android {
     defaultConfig {
         applicationId "com.aquamorph.frcmanager"
-        minSdkVersion 19
-        targetSdkVersion 34
-        compileSdk 34
-        versionCode 28
-        versionName "2024.0.0"
+        minSdkVersion 21
+        targetSdkVersion 35
+        compileSdk 35
+        versionCode 29
+        versionName "2025.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "TBA_KEY", getProps("TBA_KEY"))
         multiDexEnabled true
@@ -30,16 +30,18 @@ android {
     }
     buildTypes {
         debug {
-            testCoverageEnabled true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "boolean", "APP_DEBUG", "true"
+            enableUnitTestCoverage true
+            enableAndroidTestCoverage true
         }
         release {
-            testCoverageEnabled false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "boolean", "APP_DEBUG", "false"
+            enableUnitTestCoverage false
+            enableAndroidTestCoverage false
         }
     }
     sourceSets {
@@ -52,8 +54,8 @@ android {
     }
     namespace 'com.aquamorph.frcmanager'
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
 }
 
@@ -61,15 +63,15 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'org.assertj:assertj-core:3.12.2'
     testImplementation 'junit:junit:4.13.2'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.vectordrawable:vectordrawable-animated:1.2.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.google.code.gson:gson:2.12.1'
     implementation 'com.github.apl-devs:appintro:v4.2.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlinLibVersion}"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -79,8 +81,8 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     // Android runner and rules support
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test:rules:1.6.1'
 
     // Espresso support
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
@@ -88,10 +90,10 @@ dependencies {
     })
 
     // add this for intent mocking support
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.6.1'
 
     // add this for webview testing support
-    androidTestImplementation 'androidx.test.espresso:espresso-web:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-web:3.6.1'
 }
 
 repositories {
